--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -31,7 +31,7 @@ html(lang='en')
         // Navigation
         nav#mainNav.navbar.navbar-expand-lg.navbar-light.fixed-top.py-3
             .container
-                a.navbar-brand.js-scroll-trigger(href='#page-top') Start Bootstrap
+                a.navbar-brand.js-scroll-trigger(href='#page-top') Ibrahim Abdullah
                 button.navbar-toggler.navbar-toggler-right(type='button', data-toggle='collapse', data-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                     span.navbar-toggler-icon
                 #navbarResponsive.collapse.navbar-collapse
@@ -50,79 +50,95 @@ html(lang='en')
             .container.h-100
                 .row.h-100.align-items-center.justify-content-center.text-center
                     .col-lg-10.align-self-end
-                        h1.text-uppercase.text-white.font-weight-bold Your Favorite Source of Free Bootstrap Themes
+                        h1.text-uppercase.text-white.font-weight-bold
                         hr.divider.my-4
                     .col-lg-8.align-self-baseline
                         p.text-white-75.font-weight-light.mb-5
-                            | Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!
-                        a.btn.btn-primary.btn-xl.js-scroll-trigger(href='#about') Find Out More
+                            | So let not this present life decieve you | surah Fatir - Verse 5
+                        a.btn.btn-primary.btn-xl.js-scroll-trigger(href='#about') Learn More about me?
 
         // About
         section#about.page-section.bg-primary
             .container
                 .row.justify-content-center
                     .col-lg-8.text-center
-                        h2.text-white.mt-0 We've got what you need!
+                        h2.text-white.mt-0 About Me!
                         hr.divider.light.my-4
                         p.text-white-50.mb-4
-                            | Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!
-                        a.btn.btn-light.btn-xl.js-scroll-trigger(href='#services') Get Started!
+                            | Throughout my life I’ve developed many skills and experiences. I was always intrigued with tech and started my career in hardware troublshooting problems. I was always hardworking and patient. I love tinkering on problems and finding solutions. This lead me to software devolpment and taking a three month intensive course. Life stops always gives oppurtunity to those who wish to obtain it. I have been in many jobs that weren't a great match, but in the end I am happy for all the experiences i've gained. I'm practical and honest, I don’t beat around the bush. I am ready to tackle whats next. 
+                        a.btn.btn-light.btn-xl.js-scroll-trigger(href='#services') Next
 
         // Services
         section#services.page-section
             .container
-                h2.text-center.mt-0 At Your Service
+                h2.text-center.mt-0 Services
                 hr.divider.my-4
                 .row
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             i.fas.fa-4x.fa-gem.text-primary.mb-4
-                            h3.h4.mb-2 Sturdy Themes
-                            p.text-muted.mb-0 Our themes are updated regularly to keep them bug free!
+                            h3.h4.mb-2 HTML
+                            p.text-muted.mb-0 Skilled in HTML
                     .col-lg-3.col-md-6.text-center
                         .mt-5
-                            i.fas.fa-4x.fa-laptop-code.text-primary.mb-4
-                            h3.h4.mb-2 Up to Date
-                            p.text-muted.mb-0 All dependencies are kept current to keep things fresh.
+                            i.fas.fa-4x.fa-gem.text-primary.mb-4
+                            h3.h4.mb-2 CSS 
+                            p.text-muted.mb-0 Skilled in CSS | Bootstrap | Flex-box and Design
                     .col-lg-3.col-md-6.text-center
                         .mt-5
                             i.fas.fa-4x.fa-globe.text-primary.mb-4
-                            h3.h4.mb-2 Ready to Publish
-                            p.text-muted.mb-0 You can use this design as is, or you can make changes!
+                            h3.h4.mb-2 Frameworks
+                            p.text-muted.mb-0 Visual Studio | Sublime | Node | React | Express | Mongoose | EJS 
                     .col-lg-3.col-md-6.text-center
                         .mt-5
-                            i.fas.fa-4x.fa-heart.text-primary.mb-4
-                            h3.h4.mb-2 Made with Love
-                            p.text-muted.mb-0 Is it really open source if it's not made with love?
+                            i.fas.fa-4x.fa-globe.text-primary.mb-4
+                            h3.h4.mb-2 Database
+                            p.text-muted.mb-0 MongoDB Express Moongoose
+                    .col-lg-3.col-md-6.text-center
+                        .mt-5
+                            i.fas.fa-4x.fa-globe.text-primary.mb-4
+                            h3.h4.mb-2 Managment and Deployment
+                            p.text-muted.mb-0 Git | GitHub(Vesion Control) | Command Line | Heroku
+                    .col-lg-3.col-md-6.text-center
+                        .mt-5
+                            i.fas.fa-4x.fa-globe.text-primary.mb-4
+                            h3.h4.mb-2 Methodologies
+                            p.text-muted.mb-0 Object Oriented Programming | MVC Pattern | Wire Framing | CRUD/REST 
 
         // Portfolio
         div#portfolio
             .container-fluid.p-0
                 .row.no-gutters
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/1.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/1.jpg', alt='')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/img6.jpg')
+                            
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/img6.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
-                                    | Project Name
+                                    | ChatLinxs 
+                                    .project
+                                        a(href='#')
+                                        
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/2.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/2.jpg', alt='')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/img7.jpg')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/img7.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
-                                    | Project Name
+                                    | EntryNote
+                                
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/3.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/3.jpg', alt='')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/img5.jpg')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/img5.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
-                                    | Project Name
+                                    | Tamagachi
+                                
                     .col-lg-4.col-sm-6
                         a.portfolio-box(href='assets/img/portfolio/fullsize/4.jpg')
                             img.img-fluid(src='assets/img/portfolio/thumbnails/4.jpg', alt='')
@@ -130,7 +146,8 @@ html(lang='en')
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
-                                    | Project Name
+                                    | Wayferer
+                                
                     .col-lg-4.col-sm-6
                         a.portfolio-box(href='assets/img/portfolio/fullsize/5.jpg')
                             img.img-fluid(src='assets/img/portfolio/thumbnails/5.jpg', alt='')
@@ -138,21 +155,15 @@ html(lang='en')
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
-                                    | Project Name
-                    .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/6.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/6.jpg', alt='')
-                            .portfolio-box-caption.p-3
-                                .project-category.text-white-50
-                                    | Category
-                                .project-name
-                                    | Project Name
+                                    | Card Collector
+                                
+                
 
         // Call to action
         section.page-section.bg-dark.text-white
             .container.text-center
-                h2.mb-4 Free Download at Start Bootstrap!
-                a.btn.btn-light.btn-xl(href='https://startbootstrap.com/theme/creative/') Download Now!
+                
+                a.btn.btn-light.btn-xl(href='https://startbootstrap.com/theme/creative/') Download Resume!
 
         // Contact
         section#contact.page-section
@@ -162,16 +173,16 @@ html(lang='en')
                         h2.mt-0 Let's Get In Touch!
                         hr.divider.my-4
                         p.text-muted.mb-5
-                            | Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!
+                            | Give me a call or send an email and I will get back to you as soon as possible!
                 .row
                     .col-lg-4.ml-auto.text-center.mb-5.mb-lg-0
                         i.fas.fa-phone.fa-3x.mb-3.text-muted
-                        div +1 (555) 123-4567
+                        div +1 (872) 227-1317
                     .col-lg-4.mr-auto.text-center
                         i.fas.fa-envelope.fa-3x.mb-3.text-muted
 
                         // Make sure to change the email address in BOTH the anchor text and the link target below!
-                        a.d-block(href='mailto:contact@yourwebsite.com') contact@yourwebsite.com
+                        a.d-block(href='mailto:contact@yourwebsite.com') ibrahimabdull93@gmail.com
 
         // Footer
         footer.bg-light.py-5
