--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -107,8 +107,11 @@ html(lang='en')
 
         // Portfolio
         div#portfolio
+            h2.text-center.mt-0 Projects
+            hr.divider.my-4
             .container-fluid.p-0
                 .row.no-gutters
+                    
                     .col-lg-4.col-sm-6
                         a.portfolio-box(href='assets/img/portfolio/fullsize/img6.jpg')
                             
