--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,8 @@
 // Variables
 
 //- Override and add to color system
-
-$orange: #f4623a;
+ 
+$orange: #1a0f0b98;
 $brown: #5c4d42;
 
 //- Override primary color
