--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Creative - Start Bootstrap Theme
+        title Portfolio
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/img/favicon.ico')
@@ -65,7 +65,7 @@ html(lang='en')
                         h2.text-white.mt-0 About Me!
                         hr.divider.light.my-4
                         p.text-white-50.mb-4
-                            | Throughout my life I’ve developed many skills and experiences. I was always intrigued with tech and started my career in hardware troublshooting problems. I was always hardworking and patient. I love tinkering on problems and finding solutions. This lead me to software devolpment and taking a three month intensive course. Life stops always gives oppurtunity to those who wish to obtain it. I have been in many jobs that weren't a great match, but in the end I am happy for all the experiences i've gained. I'm practical and honest, I don’t beat around the bush. I am ready to tackle whats next. 
+                            | Throughout my life I’ve developed many skills and experiences. I was always intrigued with tech and started my career in hardware troublshooting problems. I was always hardworking and patient. I love tinkering on problems and finding solutions. This lead me to software devolpment and taking a three month intensive course. I have been in many jobs that weren't a great match, but in the end I am happy for all the experiences i've gained. I'm practical and honest, I don’t beat around the bush. I am ready to tackle whats next. 
                         a.btn.btn-light.btn-xl.js-scroll-trigger(href='#services') Next
 
         // Services
@@ -113,18 +113,20 @@ html(lang='en')
                 .row.no-gutters
                     
                     .col-lg-4.col-sm-6
+                        a(href='https://project-chat-linxs.herokuapp.com')
+                            | Project Link
                         a.portfolio-box(href='assets/img/portfolio/fullsize/img6.jpg')
-                            
                             img.img-fluid(src='assets/img/portfolio/thumbnails/img6.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
                                 .project-name
                                     | ChatLinxs 
-                                    .project
-                                        a(href='#')
+                                    
                                         
                     .col-lg-4.col-sm-6
+                        a.project-name(href='https://entrynote-project-one.herokuapp.com')
+                            | Project Link
                         a.portfolio-box(href='assets/img/portfolio/fullsize/img7.jpg')
                             img.img-fluid(src='assets/img/portfolio/thumbnails/img7.jpg', alt='')
                             .portfolio-box-caption
@@ -134,6 +136,9 @@ html(lang='en')
                                     | EntryNote
                                 
                     .col-lg-4.col-sm-6
+                        a.project-name(href='https://pages.git.generalassemb.ly/abewallah/tamgachi-first-project/')
+                            | Project Link 
+                            
                         a.portfolio-box(href='assets/img/portfolio/fullsize/img5.jpg')
                             img.img-fluid(src='assets/img/portfolio/thumbnails/img5.jpg', alt='')
                             .portfolio-box-caption
@@ -143,8 +148,10 @@ html(lang='en')
                                     | Tamagachi
                                 
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/4.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/4.jpg', alt='')
+                        a(href='https://project-4-react-side-wayferer.herokuapp.com/')  | Project Link 
+
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/4.jpg')    
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/5.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -152,8 +159,11 @@ html(lang='en')
                                     | Wayferer
                                 
                     .col-lg-4.col-sm-6
+                        a.project-name(href='https://git.generalassemb.ly/abewallah/Finch-collector-lab-views/tree/master/cardcollector')
+                            | Repo Link 
+
                         a.portfolio-box(href='assets/img/portfolio/fullsize/5.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/5.jpg', alt='')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/img4.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -166,7 +176,7 @@ html(lang='en')
         section.page-section.bg-dark.text-white
             .container.text-center
                 
-                a.btn.btn-light.btn-xl(href='https://startbootstrap.com/theme/creative/') Download Resume!
+                a.btn.btn-light.btn-xl(href='#') Download Resume!
 
         // Contact
         section#contact.page-section
@@ -185,12 +195,12 @@ html(lang='en')
                         i.fas.fa-envelope.fa-3x.mb-3.text-muted
 
                         // Make sure to change the email address in BOTH the anchor text and the link target below!
-                        a.d-block(href='mailto:contact@yourwebsite.com') ibrahimabdull93@gmail.com
+                        a.d-block(href='#') ibrahimabdull93@gmail.com
 
         // Footer
         footer.bg-light.py-5
             .container
-                .small.text-center.text-muted Copyright © 2020 - Start Bootstrap
+                .small.text-center.text-muted Copyright © 2020 - Ibrahim Abdullah
 
         // Bootstrap core JS
         script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js')
