--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -113,10 +113,9 @@ html(lang='en')
                 .row.no-gutters
                     
                     .col-lg-4.col-sm-6
-                        a(href='https://project-chat-linxs.herokuapp.com')
-                            | Project Link
+                        a(href='https://project-chat-linxs.herokuapp.com') Project Link
                         a.portfolio-box(href='assets/img/portfolio/fullsize/img6.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/img6.jpg', alt='')
+                            img(src='assets/img/portfolio/thumbnails/img6.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -128,7 +127,7 @@ html(lang='en')
                         a.project-name(href='https://entrynote-project-one.herokuapp.com')
                             | Project Link
                         a.portfolio-box(href='assets/img/portfolio/fullsize/img7.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/img7.jpg', alt='')
+                            img(src='assets/img/portfolio/thumbnails/img7.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -138,9 +137,9 @@ html(lang='en')
                     .col-lg-4.col-sm-6
                         a.project-name(href='https://pages.git.generalassemb.ly/abewallah/tamgachi-first-project/')
                             | Project Link 
-                            
+
                         a.portfolio-box(href='assets/img/portfolio/fullsize/img5.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/img5.jpg', alt='')
+                            img(src='assets/img/portfolio/thumbnails/img5.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -150,8 +149,8 @@ html(lang='en')
                     .col-lg-4.col-sm-6
                         a(href='https://project-4-react-side-wayferer.herokuapp.com/')  | Project Link 
 
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/4.jpg')    
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/5.jpg', alt='')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/5.jpg')    
+                            img(src='assets/img/portfolio/thumbnails/5.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -162,8 +161,8 @@ html(lang='en')
                         a.project-name(href='https://git.generalassemb.ly/abewallah/Finch-collector-lab-views/tree/master/cardcollector')
                             | Repo Link 
 
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/5.jpg')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/img4.jpg', alt='')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/img4.jpg')
+                            img(src='assets/img/portfolio/thumbnails/img4.jpg', alt='')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Category
@@ -175,8 +174,13 @@ html(lang='en')
         // Call to action
         section.page-section.bg-dark.text-white
             .container.text-center
+                a(href='https://www.linkedin.com/in/ibrahim-s-abdullah/').text-white
+                    i.fab.fa-linkedin.fa-3x.mb-3.mr-4
+                a(href='https://twitter.com/abe75710374').text-white
+                    i.fab.fa-twitter.fa-3x.mb-3.mr-4
+                a(href='https://github.com/abewallah').text-white
+                    i.fab.fa-github-square.fa-3x.mb-3
                 
-                a.btn.btn-light.btn-xl(href='#') Download Resume!
 
         // Contact
         section#contact.page-section
