--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -1,10 +1,15 @@
 // Styling for the portfolio section
 #portfolio {
     .container-fluid {
-        max-width: 1920px;
+        max-width: 1620px;
+        box-sizing: border-box;
         .portfolio-box {
+            
             position: relative;
             display: block;
+            width: 400px;
+            height: 300px;
+            
             .portfolio-box-caption {
                 display: flex;
                 align-items: center;
@@ -12,10 +17,11 @@
                 flex-direction: column;
 
                 width: 100%;
-                height: 100%;
+                height: 85%;
 
                 position: absolute;
                 bottom: 0;
+                top: 0;
 
                 text-align: center;
                 opacity: 0;
