--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -45,3 +45,10 @@ img{
     width: 100%;
     height: 80%;
 }
+
+.imgCont img{
+    box-sizing: border-box;
+    width: 25%;
+    height: auto;
+    float: left;
+}
